--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<title>DMI.dk</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="wrapper">
+	<div class="container">
 		
 		<heading class="header">
 			<div id="logo"><img src="" alt="DMI"></div>
 		</heading>
 
 		<div id="content">
+			<img src="http://www.dmi.dk/dmi/femdgn_kobenhavn.png">
 
 		</div>
 
